[gd_scene load_steps=4 format=3 uid="uid://dqxbgvbcd40v2"]

[ext_resource type="Script" path="res://actors/enemies/bird_spawner.gd" id="1_eytot"]
[ext_resource type="PackedScene" uid="uid://o1t5igjbjddg" path="res://actors/enemies/enemy_bird.tscn" id="2_h8x3s"]

[sub_resource type="CanvasTexture" id="CanvasTexture_tkae1"]

[node name="BirdSpawner" type="Node2D" groups=["spawner"]]
script = ExtResource("1_eytot")
enemy_bird_scene = ExtResource("2_h8x3s")

[node name="Sprite2D" type="Sprite2D" parent="."]
visible = false
position = Vector2(-5.96046e-08, 0)
scale = Vector2(20, 20)
texture = SubResource("CanvasTexture_tkae1")

[node name="StartTimer" type="Timer" parent="."]

[node name="MobTimer" type="Timer" parent="."]
wait_time = 0.5

[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="timeout" from="MobTimer" to="." method="_on_mob_timer_timeout"]
